[package]
name = "cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
betty = { path = "../core/" }
iso_currency = "0.4.1" 
rust_decimal = { version = "1.14", features = ["maths"] }
rust_decimal_macros = "1.14"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
term-table = "1.3"
termion = "1.5"
